ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: coder
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8090
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 80 

---

apiVersion: v1
kind: Service
metadata:
  name: service1

spec:
  selector:
    app: one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---

apiVersion: v1
kind: Service
metadata:
  name: service2

spec:
  selector:
    app: two
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000




































A
A
A
A
A
A
A
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
A
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
B
---
